[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "volttron-lib-bacnet"
version = "0.1.0"
description = "BACnet driver supported and maintained by the Volttron team."
authors = ["Volttron <volttron@pnnl.gov>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/VOLTTRON/volttron-lib-bacnet"
homepage = "https://github.com/VOLTTRON/volttron-lib-bacnet"
keywords = []
packages = [ { include = "volttron", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
volttron-lib-base-driver = {git = "https://github.com/VOLTTRON/volttron-lib-base-driver.git", branch = "develop"}

[tool.poetry.group.test.dependencies]
volttron-testing = {git = "https://github.com/VOLTTRON/volttron-testing.git", branch = "develop"}
pytest = "^6.2.5"
mock = "^4.0.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0"
yapf = "^0.32.0"
toml = "^0.10.2"
isort = "^5.10.1"
safety = "^1.10.3"
mypy = "^0.942"
coverage = "^6.3.2"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]
